tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/valid-syntax-export-star-with-attributes/input.js
export * from "foo.json" assert { type: "json" };
