tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/invalid-syntax-export-with-and-attributes-multiple-lines/input.js
export { x } from "foo" assert
{ type: "json" }
